--- a/authetication/index.html
+++ b/authetication/index.html
@@ -27,7 +27,12 @@
                     <button type="submit" class="btn btn-primary">signin</button>
                 </div>
             </form> 
-        </div>   
+        </div>  
+        
+        <div id="profile" class="mt-5">
+            <h4>Profile</h4>
+            <button id="logout" class="btn btn-primary">ออกจากระบบ</button>
+        </div>
     </div>
     <!-- เรียกใช้งาน firebase -->
     <script src="app.js" type="module"></script>
